# cybersecurity-ai-agent

./: CLAUDE.md  Makefile  README.md  project_architecture.md  pyproject.toml
notebooks/: attack_agent.ipynb  cybersecurity_agent.ipynb  scan_agent.ipynb  target-scan-react-agent.ipynb
src/agent_core/edge/: tool_router.py
src/agent_core/node/: react_node.py
src/agent_core/tool/curl/: curl_tool.py  models.py
src/agent_core/tool/ffuf/: models.py
src/api_target/: main.py
src/cybersecurity_agent/: graph.py
src/cybersecurity_agent/node/: cybersecurity_summary_node.py
src/cybersecurity_agent/state/: cybersecurity_agent_state.py
src/scan_agent/node/: scan_node.py  summary_node.py
src/scan_agent/state/: scan_agent_state.py
src/target_scan_agent/: graph.py
src/target_scan_agent/edge/: tool_router.py
src/target_scan_agent/node/: generate_report.py  process_tool_results.py  target_node.py
src/target_scan_agent/report/: markdown.py
src/target_scan_agent/tools/http/: curl_tool.py  flexible_http_tool.py  models.py
src/target_scan_agent/tools/port_scan/: models.py  nmap_tool.py
src/target_scan_agent/tools/vulnerability/: models.py  nuclei_scan_tool.py
tests/target_scan_agent/: test_assistant.py
tests/target_scan_agent/edge/: test_tool_router.py
tests/target_scan_agent/tools/enumeration/: test_ffuf_integration.py
tests/target_scan_agent/tools/http/: test_curl_integration.py  test_flexible_http_integration.py
tests/target_scan_agent/tools/port_scan/: test_models.py  test_nmap_integration.py
(+1 files in other folders)
