[project]
name = "cybersecurity-ai-agent"
version = "0.1.0"
description = ""
authors = [{ name = "Vitalii Honchar", email = "weaxme@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langgraph (>=0.4.8,<0.5.0)",
    "tavily-python (>=0.7.5,<0.8.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pydantic (>=2.0.0,<3.0.0)",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/target_scan_agent",
    "src/scan_agent",
    "src/attack_agent",
    "src/agent_core",
]

[dependency-groups]
dev = [
    "langchain>=0.3.25,<0.4.0",
    "langchain-openai>=0.3.21,<0.4.0",
    "aiohttp>=3.12.11,<4.0.0",
    "pytest>=8.4.0,<9.0.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
    "black>=25.1.0,<26.0.0",
    "isort>=6.0.1,<7.0.0",
    "ipykernel>=6.29.5,<7.0.0",
    "requests>=2.32.3,<3.0.0",
    "ruff>=0.11.13,<0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-config",
    "--strict-markers",
    "--log-cli-level=INFO",
    "--log-cli-format=%(asctime)s [%(levelname)8s] %(name)s: %(message)s",
    "--log-cli-date-format=%Y-%m-%d %H:%M:%S",
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
